[package]
name = "auxcpu-auxtools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
auxtools = { git = "https://github.com/willox/auxtools" }
auxcpu-core = { path = "../core" }
auxcpu-maptick = { path = "../maptick", optional = true }

[lints]
workspace = true

[features]
maptick = ["auxcpu-maptick"]
