[package]
name = "auxcpu-maptick"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
auxcpu-impl = { path = "../impl" }
auxcpu-sigscan = { path = "../sigscan" }
cfg-if = "1"
retour = { version = "=0.4.0-alpha.4", default-features = false }

[lints]
workspace = true
